--- a/roles/file-queue-mediator/tasks/main.yml
+++ b/roles/file-queue-mediator/tasks/main.yml
@@ -18,7 +18,7 @@
     tags: file-queue-mediator
 
   - name: add file-queue mediator config
-    template: src=file-queue-mediator.conf.j2 dest=/usr/share/openhim-mediator-file-queue/config/config.json
+    template: src=config.json.j2 dest=/usr/share/openhim-mediator-file-queue/config/config.json
     tags: file-queue-mediator
 
   - name: install git for use in npm install
