--- a/variables.yml
+++ b/variables.yml
@@ -1,4 +1,6 @@
 ---
+openhim_server_public_hostname: localhost
+openhim_server_public_protocol: https
 openhim_core_version: v4.0.1
 openhim_console_version: v1.12.0
 sync_mediator_branch_or_tag: master
