--- a/roles/openhim-core/tasks/main.yml
+++ b/roles/openhim-core/tasks/main.yml
@@ -38,6 +38,10 @@
       state: present
     tags: openhim
 
+  - name: configure openhim-core
+    template: src=openhim-config.json.j2 dest=/usr/lib/openhim-core/config/default.json
+    tags: openhim
+
   - name: run openhim-core
     service: name=openhim-core state=started enabled=yes
     tags: openhim
